--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://material.io/design/iconography/animated-icons.html#usage"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
